{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 58,
  "lineage": "8b097183-a9b9-f72f-d415-ac5eb8ae5525",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04592e28abc2b9fc9",
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:instance/i-039f81cabaa0f9a32",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039f81cabaa0f9a32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "docvault-devops-testing",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02eaf0f28b20e8ddc",
            "private_dns": "ip-10-30-1-77.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.77",
            "public_dns": "ec2-54-169-229-80.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.229.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:900069968619:key/d5be64e1-8bd1-4f61-b1db-4ba800c158c2",
                "throughput": 125,
                "volume_id": "vol-053b42ab7c48952da",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9e2719b888189f8",
            "tags": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing",
              "Project": "DocVault"
            },
            "tags_all": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing",
              "Project": "DocVault"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-root",
              "Project": "DocVault"
            },
            "vpc_security_group_ids": [
              "sg-025ae624f9576fe64"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.admin",
            "aws_security_group.devops",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:internet-gateway/igw-0bc31e8340e415210",
            "id": "igw-0bc31e8340e415210",
            "owner_id": "900069968619",
            "tags": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-igw",
              "Project": "DocVault"
            },
            "tags_all": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-igw",
              "Project": "DocVault"
            },
            "vpc_id": "vpc-080fcc7449f380c45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bc31e8340e415210",
            "id": "r-rtb-062e09ba80da47d251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062e09ba80da47d25",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:route-table/rtb-062e09ba80da47d25",
            "id": "rtb-062e09ba80da47d25",
            "owner_id": "900069968619",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-public-rt",
              "Project": "DocVault"
            },
            "tags_all": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-public-rt",
              "Project": "DocVault"
            },
            "timeouts": null,
            "vpc_id": "vpc-080fcc7449f380c45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015b0c1d75eafc827",
            "route_table_id": "rtb-062e09ba80da47d25",
            "subnet_id": "subnet-0f9e2719b888189f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:security-group/sg-025ae624f9576fe64",
            "description": "Access to the DocVault Jenkins and SonarQube EC2 server",
            "egress": [],
            "id": "sg-025ae624f9576fe64",
            "ingress": [],
            "name": "docvault-devops-testing-sg",
            "name_prefix": "",
            "owner_id": "900069968619",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-sg",
              "Project": "DocVault"
            },
            "tags_all": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-sg",
              "Project": "DocVault"
            },
            "timeouts": null,
            "vpc_id": "vpc-080fcc7449f380c45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "jenkins",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Jenkins from admin CIDRs",
            "from_port": 8080,
            "id": "sgrule-1260119288",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-025ae624f9576fe64",
            "security_group_rule_id": "sgr-0535b1877aa8fa764",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.devops",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "sonarqube",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SonarQube from admin CIDRs",
            "from_port": 9000,
            "id": "sgrule-1070565467",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-025ae624f9576fe64",
            "security_group_rule_id": "sgr-05537fcd11c40a229",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.devops",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH from admin CIDRs",
            "from_port": 22,
            "id": "sgrule-1359677873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-025ae624f9576fe64",
            "security_group_rule_id": "sgr-0ab46bae5c45fe22a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.devops",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound access for package downloads, GitHub, Docker Hub, and plugin downloads",
            "from_port": 0,
            "id": "sgrule-2119593161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-025ae624f9576fe64",
            "security_group_rule_id": "sgr-02495c707cfa8c66d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.devops",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:subnet/subnet-0f9e2719b888189f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9e2719b888189f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900069968619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-public-a",
              "Project": "DocVault"
            },
            "tags_all": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-public-a",
              "Project": "DocVault"
            },
            "vpc_id": "vpc-080fcc7449f380c45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:900069968619:vpc/vpc-080fcc7449f380c45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-03ad77927893bbda6",
            "default_route_table_id": "rtb-0fbae03d446dc71f5",
            "default_security_group_id": "sg-042a5cb0d47cb77f9",
            "dhcp_options_id": "dopt-01dc513931559fae9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-080fcc7449f380c45",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbae03d446dc71f5",
            "owner_id": "900069968619",
            "tags": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-vpc",
              "Project": "DocVault"
            },
            "tags_all": {
              "Component": "DevOpsServer",
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "docvault-devops-testing-vpc",
              "Project": "DocVault"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}